chore: fix surefire config